--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> 
     <link rel="stylesheet" href="../css/estilos.css">
-    <title>Document</title>
+    
+    <title>Juventudes | San Lorenzo</title>
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="navegador">
             <a href="../index.html"><img src="../img/Juv negro.png" alt="" width="100px"></a>
-            <ul>
+            <ul class="menu">
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="./nosotros.html">Nosotros</a></li>
                 <li><a href="./eventos.html">Eventos</a></li>
@@ -20,13 +22,22 @@
         </nav>
     </header>
     <main>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime quod, id dolorem officia dolor cumque nihil optio deserunt voluptates vero eligendi in hic adipisci ad voluptatibus vel corporis quo! Praesentium. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis in laudantium fugiat quia sed blanditiis similique quae inventore eligendi nam nihil dolorem natus quod et, temporibus sit aperiam amet nulla!</p>
-        <h2>Escribinos!</h2>
-        <a href="https://api.whatsapp.com/send/?phone=5403412293261&text&type=phone_number&app_absent=0"><img src="../img/whatsapp-logo.png" alt=""></a>
+
+    <section class="info">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3189.808596108939!2d-60.735201324541684!3d-32.74307987367774!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b65afcd7de8865%3A0x850c24313a2953ce!2sCentro%20Cultural%20y%20Educativo%20Municipal%20%22Brigadier%20Estanislao%20L%C3%B3pez%22!5e1!3m2!1ses-419!2sar!4v1726615189184!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <div class="wsp1">
+            <h2>Escribinos!</h2>
+            <a href="https://api.whatsapp.com/send/?phone=5403412293261&text&type=phone_number&app_absent=0" class="wsp"><img src="../img/whatsapp-logo.png" alt=""></a>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime quod, id dolorem officia dolor cumque nihil optio deserunt voluptates vero eligendi in hic adipisci ad voluptatibus vel corporis quo! Praesentium. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis in laudantium fugiat quia sed blanditiis similique quae inventore eligendi nam nihil dolorem natus quod et, temporibus sit aperiam amet nulla!</p>
+        </div>
+    </section>
     </main>
-    <footer>
-        <h2>Juventudes San Lorenzo</h2>
+    <footer>        
+        <section class="logos"> <!--LOGOS INSTITUCIONALES-->
+            <img id="juv" src="../img/juv-logob.png" alt="">
+            <img src="../img/cul-logob.png" alt="">
+            <img src="../img/muni-logobp.png" alt="">
+        </section>
         <section class="redes"> <!--REDES SOCIALES-->
             <a href="https://www.instagram.com/juventudes_sanlorenzo/"><img src="../img/logotipo-de-instagram.png" alt=""></a>
             <a href="https://api.whatsapp.com/send/?phone=5403412293261&text&type=phone_number&app_absent=0"><img src="../img/whatsapp-logo.png" alt=""></a>
@@ -35,11 +46,7 @@
             <a href="https://www.tiktok.com/@juventudes.sl"><img src="../img/tiktok-logo.png" alt=""></a>
             <a href="https://www.twitch.tv/juventudes_sanlorenzo"><img src="../img/twitch-logo.png" alt=""></a>
         </section>
-        <section class="logos"> <!--LOGOS INSTITUCIONALES-->
-            <img id="juv" src="../img/juv-logob.png" alt="">
-            <img src="../img/cul-logob.png" alt="">
-            <img src="../img/muni-logobp.png" alt="">
-        </section>
     </footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
