--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
-    <title>Document</title>
+    
+    <title>Juventudes | San Lorenzo</title>
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="navegador">
             <a href="../index.html"><img src="../img/Juv negro.png" alt="" width="100px"></a>
-            <ul>
+            <ul class="menu">
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="./nosotros.html">Nosotros</a></li>
                 <li><a href="./eventos.html">Eventos</a></li>
@@ -20,21 +22,24 @@
         </nav>
     </header>
     <main>
-        <section>
-            <h1>EJEMPLO</h1>
+        <section class="actividades">
             <img src="../img/load-temp.jpg" alt="">
-        </section>
-        <section>
-            <h1>EJEMPLO</h1>
             <img src="../img/load-temp.jpg" alt="">
-        </section>
-        <section>
-            <h1>EJEMPLO</h1>
+            <img src="../img/load-temp.jpg" alt="">
+            <img src="../img/load-temp.jpg" alt="">
+            <img src="../img/load-temp.jpg" alt="">
+            <img src="../img/load-temp.jpg" alt="">
+            <img src="../img/load-temp.jpg" alt="">
+            <img src="../img/load-temp.jpg" alt="">
             <img src="../img/load-temp.jpg" alt="">
         </section>
     </main>
-    <footer>
-        <h2>Juventudes San Lorenzo</h2>
+    <footer>        
+        <section class="logos"> <!--LOGOS INSTITUCIONALES-->
+            <img id="juv" src="../img/juv-logob.png" alt="">
+            <img src="../img/cul-logob.png" alt="">
+            <img src="../img/muni-logobp.png" alt="">
+        </section>
         <section class="redes"> <!--REDES SOCIALES-->
             <a href="https://www.instagram.com/juventudes_sanlorenzo/"><img src="../img/logotipo-de-instagram.png" alt=""></a>
             <a href="https://api.whatsapp.com/send/?phone=5403412293261&text&type=phone_number&app_absent=0"><img src="../img/whatsapp-logo.png" alt=""></a>
@@ -43,11 +48,7 @@
             <a href="https://www.tiktok.com/@juventudes.sl"><img src="../img/tiktok-logo.png" alt=""></a>
             <a href="https://www.twitch.tv/juventudes_sanlorenzo"><img src="../img/twitch-logo.png" alt=""></a>
         </section>
-        <section class="logos"> <!--LOGOS INSTITUCIONALES-->
-            <img id="juv" src="../img/juv-logob.png" alt="">
-            <img src="../img/cul-logob.png" alt="">
-            <img src="../img/muni-logobp.png" alt="">
-        </section>
     </footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
