--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> 
     <link rel="stylesheet" href="../css/estilos.css">
-    <title>Document</title>
+    
+    <title>Juventudes | San Lorenzo</title>
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="navegador">
             <a href="../index.html"><img src="../img/Juv negro.png" alt="" width="100px"></a>
-            <ul>
+            <ul class="menu">
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="./nosotros.html">Nosotros</a></li>
                 <li><a href="./eventos.html">Eventos</a></li>
@@ -20,23 +22,27 @@
         </nav>
     </header>
     <main>
-        <h1>NOSOTROS</h1>
-        <h2>Coordinacion de Juventudes de la Municipalidad de San Lorenzo</h2>
-        <section class="noss">
+        <h1 class="nos">NOSOTROS</h1>
+        <h2 class="desc-nos">Coordinacion de Juventudes de la Municipalidad de San Lorenzo</h2>
+        <section class="foto1"> 
             <img src="../img/juv1.jpg" alt="">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate aperiam, cum error hic, ut quo ducimus tempora eligendi necessitatibus saepe molestias provident minus, nulla quam non excepturi harum reprehenderit accusantium?</p>
         </section>
-        <section class="noss">
-            <img src="../img/juvoficina.jpeg" alt="">
+        <section class="foto2">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate aperiam, cum error hic, ut quo ducimus tempora eligendi necessitatibus saepe molestias provident minus, nulla quam non excepturi harum reprehenderit accusantium?</p>
+            <img src="../img/juvoficina.jpeg" alt="">
         </section>
-        <section class="noss">
+        <section class="foto3"> 
             <img src="../img/grupo-foto.jpg" alt="">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate aperiam, cum error hic, ut quo ducimus tempora eligendi necessitatibus saepe molestias provident minus, nulla quam non excepturi harum reprehenderit accusantium?</p>
         </section>
     </main>
-    <footer>
-        <h2>Juventudes San Lorenzo</h2>
+    <footer>        
+        <section class="logos"> <!--LOGOS INSTITUCIONALES-->
+            <img id="juv" src="../img/juv-logob.png" alt="">
+            <img src="../img/cul-logob.png" alt="">
+            <img src="../img/muni-logobp.png" alt="">
+        </section>
         <section class="redes"> <!--REDES SOCIALES-->
             <a href="https://www.instagram.com/juventudes_sanlorenzo/"><img src="../img/logotipo-de-instagram.png" alt=""></a>
             <a href="https://api.whatsapp.com/send/?phone=5403412293261&text&type=phone_number&app_absent=0"><img src="../img/whatsapp-logo.png" alt=""></a>
@@ -45,11 +51,7 @@
             <a href="https://www.tiktok.com/@juventudes.sl"><img src="../img/tiktok-logo.png" alt=""></a>
             <a href="https://www.twitch.tv/juventudes_sanlorenzo"><img src="../img/twitch-logo.png" alt=""></a>
         </section>
-        <section class="logos"> <!--LOGOS INSTITUCIONALES-->
-            <img id="juv" src="../img/juv-logob.png" alt="">
-            <img src="../img/cul-logob.png" alt="">
-            <img src="../img/muni-logobp.png" alt="">
-        </section>
     </footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
