--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -28,7 +28,7 @@
         <div class="wsp1">
             <h2>Escribinos!</h2>
             <a href="https://api.whatsapp.com/send/?phone=5403412293261&text&type=phone_number&app_absent=0" class="wsp"><img src="../img/whatsapp-logo.png" alt=""></a>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime quod, id dolorem officia dolor cumque nihil optio deserunt voluptates vero eligendi in hic adipisci ad voluptatibus vel corporis quo! Praesentium. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis in laudantium fugiat quia sed blanditiis similique quae inventore eligendi nam nihil dolorem natus quod et, temporibus sit aperiam amet nulla!</p>
+            <p>"¿Tenés alguna idea, propuesta o consulta? ¡Queremos escucharte! Desde la Coordinación de Juventudes, estamos siempre abiertos a nuevas ideas y dispuestos a colaborar para seguir construyendo espacios de participación activa en nuestra comunidad. No dudes en contactarnos por cualquier duda o para sumarte a nuestras iniciativas."</p>
         </div>
     </section>
     </main>
