--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -26,15 +26,15 @@
         <h2 class="desc-nos">Coordinacion de Juventudes de la Municipalidad de San Lorenzo</h2>
         <section class="foto1"> 
             <img src="../img/juv1.jpg" alt="">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate aperiam, cum error hic, ut quo ducimus tempora eligendi necessitatibus saepe molestias provident minus, nulla quam non excepturi harum reprehenderit accusantium?</p>
+            <p>"Somos la Coordinación de Juventudes de la Municipalidad de San Lorenzo, un equipo dedicado a promover y organizar actividades que potencien el desarrollo social y cultural de los jóvenes de nuestra comunidad. A través de eventos y programas educativos, trabajamos para crear espacios de participación activa, donde los jóvenes puedan expresarse y crecer juntos."</p>
         </section>
         <section class="foto2">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate aperiam, cum error hic, ut quo ducimus tempora eligendi necessitatibus saepe molestias provident minus, nulla quam non excepturi harum reprehenderit accusantium?</p>
+            <p>"En nuestras actividades, siempre buscamos conectar con diferentes sectores de la comunidad juvenil, impulsando iniciativas que fomenten la inclusión, la creatividad y el trabajo en equipo. Aquí nos reunimos durante uno de los eventos de la feria local, compartiendo ideas y colaborando con otros jóvenes comprometidos con el cambio."</p>
             <img src="../img/juvoficina.jpeg" alt="">
         </section>
         <section class="foto3"> 
             <img src="../img/grupo-foto.jpg" alt="">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate aperiam, cum error hic, ut quo ducimus tempora eligendi necessitatibus saepe molestias provident minus, nulla quam non excepturi harum reprehenderit accusantium?</p>
+            <p>"Nuestro equipo no solo coordina eventos, también está comprometido con la formación de líderes juveniles. Creemos en la importancia de brindar herramientas para que los jóvenes puedan tomar un rol activo en la sociedad, siendo agentes de cambio y promotores de nuevas oportunidades para sus pares."</p>
         </section>
     </main>
     <footer>        
